[project]
name = "mas-ghost3"
version = "0.1.0"
description = "Multi-Agent System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.0.10",
    "langchain-google-genai>=0.0.1",
    "jinja2>=3.1.0",
    "langchain-core>=0.1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23,<24",
    "isort>=5.12.0",
    "dotenv>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
